2007-08-13  Torsten Rahn  <rahn@kde.org>
	
    * src/lib/MarbleControlBox.ui: 
    Make it compile with Qt 4.2 again.

2007-08-13  Andrew Manson   <g.real.ate@gmail.com>

    Added File View Tab to the Marble Control box as a view to the 
    GpxFileModel. The tab is disabled by default and needs command
    line arg --enableFileView to see.
    * src/kdemain.cpp: cmd line arg
    * src/katlascontrol.cpp : new method to enable/disable File view
    * src/lib/MarbleControlBox.ui : new tab
    
    Added a GpxFileModel to MarbleModelPrivate and added nessary 
    accessors.
    * src/lib/MarbleWidget.cpp : accessor 
    * src/lib/MarbleModel.h : new member variable and accessors
    
    Added nessary ModelItem functions to GpxFile
    * src/lib/gps/GpxFile.cpp : more like a model item
    
    Added new Class GpxFileModel 
    * src/lib/gps/GpxFileModel.{h,cpp} : new class
    
    Added the use of a GpxFileModel to the GpsLayer
    * src/lib/gps/GpsLayer : used GpxFileModel
    
    
2007-08-13  Torsten Rahn  <rahn@kde.org>
	
	- adding window manager application icon
	- adding What's this icon to the ressource file.

    * src/marble.qrc
    * src/QtMainWindow.cpp
    * src/icons/marble.png

2007-08-13  Pino Toscano  <pino@kde.org>

    * src/KdeMainWindow:
    * src/marbleui.rc:
        - Make the KDE GUI look more like a KDE application.

2007-08-13  Torsten Rahn  <rahn@kde.org>
	
    * src/lib/MarbleWidget.cpp:
    * src/lib/gps/Track.cpp:
    * src/lib/TileCreator.cpp:
    * src/lib/MarbleModel.cpp:
    * src/lib/TextureTile.cpp:
    * src/lib/texcolorizer.cpp:
    * CMakeLists.txt:

        Patch by Tim Sutton of QGIS fame. Introduces 
	some fixes and more careful coding to 
	TileCreator, some minor fixes and qDebug statements.

2007-08-13  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel.{h,cpp}:
    * src/lib/maptheme.cpp:
    * src/lib/katlasthemeselectview.cpp:
        - Selecting the Maptheme icon in the themeview at startup.
